--- a/sass/components/_auth-nav.scss
+++ b/sass/components/_auth-nav.scss
@@ -38,7 +38,7 @@
 }
 
 .auth-nav .link:hover, .auth-nav .link:focus{
-    color: #2196f3; 
-    --color2:  #2196f3;
+    color: $accent; 
+    --color2:  #{$accent};
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
