--- a/sass/components/_baza.scss
+++ b/sass/components/_baza.scss
@@ -13,6 +13,6 @@ html {
 }
 
 .page { 
-   background-color: #ffffff;
-   color: var(--primary-text-color);
+   background-color: $primary-white-color;
+   color: $primary-text-color;
      }
