--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './utils/placeholders';
 @import './components/baza';
 @import './components/navigation-baza';
 @import './components/logo';
