--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -3,10 +3,10 @@
     width: 1231px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    @extend %margin-auto;
     
 }
+
 
 .advantage-list {
     display: flex; 
@@ -14,55 +14,116 @@
     margin: 0;
     padding-left: 0;
     padding-right: 0;
-}
 
-.advantage-list .item {
-    width: 278px;
-    margin-right: 30px;
-}
-
-.advantage-list .item:nth-child(4n) {
-    margin-right: 0;
-}
-
-.advantage-list .item .button-icon{
-    width: 70px;
-    height: 120px;
-    padding: auto;
-}
-
-
-
-.advantage-list .item div{
-    width: 270px;
-    height: 120px;
-    border-radius: 4px;
-    background-color: #F5F4FA;
-}
-
-.advantage-list .item a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.advantage-kartinka{
-    margin-bottom: 30px;
-}
-
-.advantage-list .title{color: var(--title-text-color);
-                       font-weight: 700;
-                      font-size: 14px;
-                      line-height: 1.2;
-                      letter-spacing: 0.03em;
-                      margin-top: 0;
-                      margin-bottom: 10px;
+     .item {
+        width: 278px;
+        margin-right: 30px;
+    }
     
+     .item:nth-child(4n) {
+        margin-right: 0;
+    }
+    
+     .item .button-icon{
+        width: 70px;
+        height: 120px;
+        padding: auto;
+    }
+    
+    
+    
+     .item div{
+        width: 270px;
+        height: 120px;
+        border-radius: 4px;
+        background-color: $fon;
+    }
+    
+     .item a{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    
+    
+     .title{color: $title-text-color;
+                           font-weight: 700;
+                          font-size: 14px;
+                          line-height: 1.2;
+                          letter-spacing: 0.03em;
+                          margin-top: 0;
+                          margin-bottom: 10px;
+        
+    }
+    
+     p {font-size: 14px;
+                       line-height: 1.71;
+                       letter-spacing: 0.03em;
+                       margin-top: 0;
+                       margin-bottom: 0;
+                    }
 }
 
-.advantage-list p {font-size: 14px;
-                   line-height: 1.71;
-                   letter-spacing: 0.03em;
-                   margin-top: 0;
-                   margin-bottom: 0;
-                }
+
+
+// .advantage-list {
+//     display: flex; 
+//     list-style: none;
+//     margin: 0;
+//     padding-left: 0;
+//     padding-right: 0;
+// }
+
+// .advantage-list .item {
+//     width: 278px;
+//     margin-right: 30px;
+// }
+
+// .advantage-list .item:nth-child(4n) {
+//     margin-right: 0;
+// }
+
+// .advantage-list .item .button-icon{
+//     width: 70px;
+//     height: 120px;
+//     padding: auto;
+// }
+
+
+
+// .advantage-list .item div{
+//     width: 270px;
+//     height: 120px;
+//     border-radius: 4px;
+//     background-color: #F5F4FA;
+// }
+
+// .advantage-list .item a{
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+// }
+
+
+
+// .advantage-list .title{color: var(--title-text-color);
+//                        font-weight: 700;
+//                       font-size: 14px;
+//                       line-height: 1.2;
+//                       letter-spacing: 0.03em;
+//                       margin-top: 0;
+//                       margin-bottom: 10px;
+    
+// }
+
+// .advantage-list p {font-size: 14px;
+//                    line-height: 1.71;
+//                    letter-spacing: 0.03em;
+//                    margin-top: 0;
+//                    margin-bottom: 0;
+//                 }
+                
+.advantage-kartinka{
+     margin-bottom: 30px;
+}                
