--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer{ 
     padding-top: 48px;
-    background-color: #2f303a;
+    background-color: $footer-main;
 }
 
 .footer-verh {
@@ -49,7 +49,7 @@ padding: 15px 16px;
 margin-right: 12px;
 border: 1px solid rgba(255, 255, 255, 0.3);
 border-radius: 4px;
-background-color: #2F303A;
+background-color: $footer-main;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -64,14 +64,14 @@ margin-left: 69px;
     margin-right: 11px;
 }
 
-.connect, .signecher{color: #ffffff;
+.connect, .signecher{color: $primary-white-color;
     font-weight: bold;
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.03em;
 }
 
-.footer-down {color: rgba(255, 255, 255, 0.4);
+.footer-down {color: $footer;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.03em;
