--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,7 +11,7 @@
 .hero-title{
            margin-top: 0;
            margin-bottom: 30px;
-           color: #ffffff;
+           color: $primary-white-color;
            font-weight: 900;
            font-size: 44px;
            line-height: 1.36;
@@ -24,6 +24,6 @@
 }
 
  .hero-link{
-            background-color: var(--accent);
-            color: #ffffff;                   
+            background-color: $accent;
+            color: $primary-white-color;                   
         }
