--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,7 +1,6 @@
 .list{
-    padding: 0;
-    margin: 0;
-    list-style: none;}
+    @extend %list
+    }
 
 .site-nav.list, .auth-nav {
     font-weight: 500;
@@ -21,20 +20,20 @@
 
 .site-nav .link{
     display: block;
-    color: var(--title-text-color);
+    color: $title-text-color;
     padding-top: 32px;
     padding-bottom: 32px;
     text-decoration: none;
 }
 
 .site-nav .link:hover, .site-nav .link:focus{
-    color: #2196f3;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: $accent;
+    @extend %transition;
 }
 
 .site-nav .link.current{
     position: relative;
-    color: var(--accent) ;}
+    color: $accent ;}
 
 .current::before{
     position: absolute;
@@ -45,5 +44,5 @@
     bottom: 0;
     right: 0;
     border-radius: 2px;
-    background-color: var(--accent);
+    background-color: $accent;
 }
