--- a/sass/components/_soc-seti-teams.scss
+++ b/sass/components/_soc-seti-teams.scss
@@ -6,7 +6,7 @@
     width: 44px;
     height: 44px; 
     border-radius: 50%;
-    background-color: #f5f4fa;
+    background-color: $fon;
     align-items: center;
     justify-content: center;     
 }
@@ -24,8 +24,8 @@
  
  .soc-seti .button:hover {
     border-radius: 50%;
-    background-color: #2196f3;
-    --color3: white;
+    background-color: $accent;
+    --color3: #{$primary-white-color};
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -36,6 +36,6 @@
 }
 
 .soc-seti .button .button-icon:hover {
-    --color3: white;
+    --color3: #{$primary-white-color};
     
 }
