--- a/sass/components/_socseti-footer.scss
+++ b/sass/components/_socseti-footer.scss
@@ -23,13 +23,13 @@
 }
 
 .socseti-footer .button-footer .button-icon{
-    --color3: white;
+    --color3: #{$primary-white-color};
     width: 20px;
     height: 20px;
 }
 
 .socseti-footer .button-footer:hover{
-    background-color: var(--accent);
+    background-color: $accent;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
