--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -12,15 +12,7 @@
     margin-bottom: 50px;
 }
 
-.team-list h3 {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    margin-top: 0;
-    margin-bottom: 10px;
-    text-align: center;
-}
+
 
 .team-list {
     display: flex;
@@ -28,19 +20,30 @@
     list-style: none;
     margin: 0;
     padding: 0;
+
+     h3 {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.2;
+        letter-spacing: 0.03em;
+        margin-top: 0;
+        margin-bottom: 10px;
+        text-align: center;}
+
+         p {  
+            font-size: 16px;
+            line-height: 1.2;
+            letter-spacing: 0.03em;
+            margin-top: 0;
+            margin-bottom: 28px;
+            text-align: center;   }
+    
 }
 
-.team-list p {  
-         font-size: 16px;
-         line-height: 1.2;
-         letter-spacing: 0.03em;
-         margin-top: 0;
-         margin-bottom: 28px;
-         text-align: center;
-}
+
 
 .color-team {
-    background-color: #f5f4fa;
+    background-color: $fon;
 }
 
 .team-list .item {
@@ -56,19 +59,19 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    fill: #AFB1B8;
+    fill: $border;
     justify-content: center;
 }
 
 .team-list .soc-seti li:hover {
-    fill: white;
+    fill: $primary-white-color;
     
 }
 
 .team-list .soc-seti img:hover {
-    background-color: var(--accent);
+    background-color: $accent;
     border-radius: 50%;
-    fill: white;
+    fill: $primary-white-color;
 }
 
 .team-list .item:nth-child(4n) {
