--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -8,24 +8,44 @@
     list-style: none;
     padding-left: 0;
     padding-right: 0;
+
+     .item {
+        position: relative;
+        width: 370px;
+        margin-right: 30px;
+    }
+    
+     .item:nth-child(3n) {
+        margin-right: 0;
+    }
+    
+     .item img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+        width: 370px;
+    }
+
+     .work{
+        display: flex;
+        position: absolute;
+        justify-content: center;
+        bottom: 0;
+        align-items: center;
+        width: 370px;
+        height: 70px;
+        background-color: rgba(47, 48, 58, 0.8);;
+        color: $primary-white-color;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.2;
+        letter-spacing: 0.03em;
+        margin: 0;
+        text-align: center;
+}
+    
 }
 
-.work-list .item {
-    position: relative;
-    width: 370px;
-    margin-right: 30px;
-}
-
-.work-list .item:nth-child(3n) {
-    margin-right: 0;
-}
-
-.work-list .item img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    width: 370px;
-}
 
 .work-title{color: var(--title-text-color);
             font-weight: bold;
@@ -35,20 +55,3 @@
             text-align: center;
         }
 
-.work-list .work{
-           display: flex;
-           position: absolute;
-           justify-content: center;
-           bottom: 0;
-           align-items: center;
-           width: 370px;
-           height: 70px;
-           background-color: rgba(47, 48, 58, 0.8);;
-           color: #ffffff;
-           font-weight: bold;
-           font-size: 14px;
-           line-height: 1.2;
-           letter-spacing: 0.03em;
-           margin: 0;
-           text-align: center;
-}
