Вносит правки после замечаний ментора

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,7 +18,8 @@
 @import './components/tehnokryaki';
 @import './components/modal-okno';
 @import './components/checkbox-kast';
-@import './components/button-open-close-modal'
+@import './components/button-open-close-modal';
+@import './components/advantage';
 
 
 
