--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,4 @@
 @charset "UTF-8";
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent: #2196f3;
-  --primary-white-color: #ffffff;
-}
-
 .list {
   padding: 0;
   margin: 0;
@@ -1139,5 +1132,77 @@ textarea:focus {
   letter-spacing: 0.06em;
   color: #ffffff;
   text-decoration: none;
+}
+
+.section, .detalis {
+  width: 1231px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.advantage-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.advantage-list .item {
+  width: 278px;
+  margin-right: 30px;
+}
+
+.advantage-list .item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.advantage-list .item .button-icon {
+  width: 70px;
+  height: 120px;
+  padding: auto;
+}
+
+.advantage-list .item div {
+  width: 270px;
+  height: 120px;
+  border-radius: 4px;
+  background-color: #F5F4FA;
+}
+
+.advantage-list .item a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.advantage-list .title {
+  color: #212121;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.advantage-list p {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.advantage-kartinka {
+  margin-bottom: 30px;
 }
 /*# sourceMappingURL=main.css.map */
